# study-munit-tdd

./: .clang-format1  CMakeLists.txt  CMakePresets.json  README.md
CircularBuffer/: CircularBuffer.c  CircularBuffer.h
ClockService/: ClockService.c  ClockService.h
MillisService/: MillisService.c  MillisService.h
cmake/: test-file.cmake
include/MyLib/: CircularBuffer.h  Flash.h  FormatOutput.h  IO.h  MicroTime.h  TaskSchedule.h  Thread.h  common.h  m28w160ect.h
include/MyLib/HomeAutomation/: LightController.h
include/MyLib/devices/: LightDriver.h  LightDriverPrivate.h
munit/: CMakeLists.txt  munit.c
source/: CircularBuffer.c  Flash.c  FormatOutput.c  TaskSchedule.c
source/CircularBuffer/: CircularBuffer.h
source/ClockService/: ClockService.c  ClockService.h
source/HomeAutomation/: LightController.c
source/MillisService/: MillisService.h
source/MyOS/posix/: Thread.c
source/devices/: AcmeWirelessLightDriver.c  LightDriver.c  MemMappedLightDriver.c  X10LightDriver.c
tests/: AllTests.c  CMakeLists.txt  CircularBufferTest.c  ClockServiceTest.c  MockMillisService.c
tests/mock/: CountingLightDriver.c  CountingLightDriver.h  FakeMicroTime.c  FakeMicroTime.h  FormatOutputSpy.c  FormatOutputSpy.h  LightDriverSpy.c  LightDriverSpy.h  LightDriverSpyTest.cpp  MockIO.c  MockIO.cpp  MockIO.hpp  MockMillisService.c  MockMillisService.h  SpyFormatOutput.c  SpyFormatOutput.h  StubMillisService.c  StubMillisService.h  testDublesAbout.md
tests/mocks/: FormatOutputSpy.c  FormatOutputSpy.h  FormatOutputSpyTest.c  MockMillisService.c
tests/source/: CircularBufferTest.c  CircularBufferTest.h  ClockServiceTest.c  ClockServiceTest.h  FormatOutputSpyTest.c  MockMillisService.c  MockMillisService.h  TaskScheduleTest.c  Test-CircularBuffer.c  Test-FakeMicroTime.cpp  Test-Flash.cpp  Test-FormatOutput.c  Test-FormatOutputSpy.c  Test-LightController.cpp  Test-MockIO.cpp  Test-SpyFormatOutput.c  Test-TaskSchedule.c  Test-Thread.cpp
tests/source/devices/: LightDriverTest.cpp
